style:awesome code css

--- a/src/renderer/assets/scss/code-theme/duotone-light.css
+++ b/src/renderer/assets/scss/code-theme/duotone-light.css
@@ -32,5 +32,5 @@ CodeMirror template by Jan T. Sott (https://github.com/idleberg), adapted by Bra
 .cm-s-duotone-light span.cm-error, .cm-s-duotone-light span.cm-invalidchar { color: #f00; }
 
 .cm-s-duotone-light span.cm-header { font-weight: normal; }
-.cm-s-duotone-light .CodeMirror-matchingbracket { text-decoration: underline; color: #faf8f5 !important; }
+.cm-s-duotone-light .CodeMirror-matchingbracket { text-decoration: underline; color: #c56262 !important; }
 
